добавлен комментарий по примерам

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
   <h1>Специфичность</h1>
 
+  <p>Для просмотра примеров нужно открыть DevTools и пошагово убирать комментарии с правил</p>
+  
   <h2>Пример 1: Иерархия специфичности</h2>
   <p>Специфичность селекторов тега, класса, атрибута, идентификатора:</p>
   <button class="main-button" id="btn">click!</button>
